<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout_top"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:background="@mipmap/title"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </LinearLayout>-->


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView_exit"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:layout_marginRight="60dp"-->
    <!--        android:src="@mipmap/home_exit"-->
    <!--        android:onClick="clickFimilyBed"-->
    <!--        android:tag="tagExit"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="40dp"
        android:format12Hour="yyyy年MM月dd日\nHH:mm:ss\nEEEE"
        android:format24Hour="yyyy年MM月dd日\nHH:mm:ss\nEEEE"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/textView_top1"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="@string/main_top_info"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:paddingLeft="15.0sp"-->
    <!--        android:paddingTop="15.0sp"-->
    <!--        android:textSize="16sp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"/>-->
    <ImageView
        android:id="@+id/imageView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/home_infobackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo" />

    <ImageView
        android:id="@+id/head_sculpture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/head_sculpture_man"
        app:layout_constraintBottom_toBottomOf="@id/imageView_info"
        app:layout_constraintEnd_toEndOf="@id/imageView_info"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/imageView_info"
        app:layout_constraintTop_toTopOf="@id/imageView_info"
        app:layout_constraintVertical_bias="0.05" />


    <TextView
        android:id="@+id/main_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_patient_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_info"
        app:layout_constraintEnd_toEndOf="@id/imageView_info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/imageView_info"
        app:layout_constraintTop_toTopOf="@id/imageView_info"
        app:layout_constraintVertical_bias="0.05" />


    <TextView
        android:id="@+id/main_patient_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/main_patient_number"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/main_patient_name"
        app:layout_constraintTop_toBottomOf="@id/main_patient_name" />


    <TextView
        android:id="@+id/main_patient_disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_patient_disease"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/main_patient_name"
        app:layout_constraintTop_toBottomOf="@id/main_patient_number" />

    <TextView
        android:id="@+id/main_patient_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/main_patient_department"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/main_patient_name"
        app:layout_constraintTop_toBottomOf="@id/main_patient_disease" />


    <TextView
        android:id="@+id/main_patient_attending_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_patient_attending_doctor"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/main_patient_name"
        app:layout_constraintTop_toBottomOf="@id/main_patient_department" />


    <TextView
        android:id="@+id/main_patient_patrol_nurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_patient_patrol_nurse"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/main_patient_name"
        app:layout_constraintTop_toBottomOf="@id/main_patient_attending_doctor" />

    <TextView
        android:id="@+id/main_patient_create_bed_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_patient_create_bed_date"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_info"
        app:layout_constraintEnd_toEndOf="@id/imageView_info"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/imageView_info"
        app:layout_constraintTop_toTopOf="@id/imageView_info"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/main_patient_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_patient_bed"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_info"
        app:layout_constraintEnd_toEndOf="@id/imageView_info"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/imageView_info"
        app:layout_constraintTop_toTopOf="@id/imageView_info"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/main_patient_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/main_patient_note"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_info"
        app:layout_constraintEnd_toEndOf="@id/imageView_info"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/imageView_info"
        app:layout_constraintTop_toTopOf="@id/imageView_info"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/main_patient_dietary_guidelines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_patient_dietary_guidelines"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/main_patient_note"
        app:layout_constraintTop_toBottomOf="@id/main_patient_note" />

    <!--        <Button-->
    <!--            android:id="@+id/buttonViewPlan"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:onClick="clickFimilyBed"-->
    <!--            android:text="查看诊疗计划"-->
    <!--            android:tag="tagViewPlan"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="16sp"-->
    <!--            app:layout_constraintBottom_toBottomOf="@id/imageView_info"-->
    <!--            app:layout_constraintEnd_toEndOf="@id/imageView_info"-->
    <!--            app:layout_constraintVertical_bias="0.9"-->
    <!--            app:layout_constraintStart_toStartOf="@id/imageView_info"-->
    <!--            app:layout_constraintTop_toTopOf="@id/imageView_info"-->
    <!--            app:layout_constraintHorizontal_bias="0.85"/>-->


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_xiaoxitixing"
        app:layout_constraintLeft_toRightOf="@id/imageView_info"
        app:layout_constraintRight_toLeftOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo" />

    <ImageView
        android:id="@+id/home_icon_xiaoxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_icon_xiaoxi"
        app:layout_constraintBottom_toBottomOf="@id/imageView1"
        app:layout_constraintEnd_toEndOf="@id/imageView1"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/imageView1"
        app:layout_constraintTop_toTopOf="@id/imageView1"
        app:layout_constraintVertical_bias="0.05" />


    <TextView
        android:id="@+id/main_message_note1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_message_note1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView1"
        app:layout_constraintEnd_toEndOf="@id/imageView1"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@id/imageView1"
        app:layout_constraintTop_toTopOf="@id/imageView1"
        app:layout_constraintVertical_bias="0.25"/>


    <TextView
        android:id="@+id/main_message_note2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_message_note2"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="@id/main_message_note1"
        app:layout_constraintTop_toBottomOf="@id/main_message_note1" />


    <ImageView
        android:id="@+id/home_dangrirenwu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/home_xiaoxitixing"
        app:layout_constraintBottom_toBottomOf="@id/imageView_info"
        app:layout_constraintLeft_toRightOf="@id/imageView_info"
        app:layout_constraintTop_toBottomOf="@id/imageView1" />


    <ImageView
        android:id="@+id/home_icon_dangrirenwu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_icon_dangrirenwu"
        app:layout_constraintBottom_toBottomOf="@id/home_dangrirenwu"
        app:layout_constraintEnd_toEndOf="@id/home_dangrirenwu"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/home_dangrirenwu"
        app:layout_constraintTop_toTopOf="@id/home_dangrirenwu"
        app:layout_constraintVertical_bias="0.05"  />

    <TextView
        android:id="@+id/main_message_task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_message_task1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/home_dangrirenwu"
        app:layout_constraintEnd_toEndOf="@id/home_dangrirenwu"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@id/home_dangrirenwu"
        app:layout_constraintTop_toTopOf="@id/home_dangrirenwu"
        app:layout_constraintVertical_bias="0.25"  />


    <TextView
        android:id="@+id/main_message_task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_message_task2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/main_message_task1"
        app:layout_constraintTop_toBottomOf="@id/main_message_task1" />
<!--    <TextView-->
<!--        android:id="@+id/main_message_task3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/main_message_task3"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintLeft_toLeftOf="@id/main_message_task2"-->
<!--        app:layout_constraintTop_toBottomOf="@id/main_message_task2" />-->
<!--    <TextView-->
<!--        android:id="@+id/main_message_task4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/main_message_task4"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintLeft_toLeftOf="@id/main_message_task3"-->
<!--        app:layout_constraintTop_toBottomOf="@id/main_message_task3" />-->
<!--    <ImageView-->
<!--        android:id="@+id/home_dangrirenwu_right"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:src="@mipmap/home_dangrirenwu"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/imageView_info"-->
<!--        app:layout_constraintLeft_toRightOf="@id/home_dangrirenwu"-->
<!--        app:layout_constraintTop_toBottomOf="@id/imageView1" />-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_baogaochaxun"
        app:layout_constraintLeft_toRightOf="@id/imageView1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@mipmap/home_jiankangxuanjiao"
        app:layout_constraintLeft_toRightOf="@id/imageView1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@mipmap/home_feiyongmingxi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/imageView_info" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@mipmap/home_tizhengshangbao"
        app:layout_constraintLeft_toRightOf="@id/imageView3"
        app:layout_constraintRight_toLeftOf="@id/imageView5"
        app:layout_constraintTop_toBottomOf="@id/imageView_info" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@mipmap/home_yongyaotixing"
        app:layout_constraintLeft_toRightOf="@id/imageView4"
        app:layout_constraintRight_toLeftOf="@id/imageView6"
        app:layout_constraintTop_toBottomOf="@id/imageView_info" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@mipmap/home_xunzhen"
        app:layout_constraintLeft_toRightOf="@id/imageView5"
        app:layout_constraintRight_toLeftOf="@id/imageView7"
        app:layout_constraintTop_toBottomOf="@id/imageView_info" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@mipmap/home_zaixianzixun"
        app:layout_constraintLeft_toRightOf="@id/imageView6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_info" />


</androidx.constraintlayout.widget.ConstraintLayout>